--- a/embedding-service/requirements.txt
+++ b/embedding-service/requirements.txt
@@ -4,6 +4,7 @@ uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
 python-multipart==0.0.6
+jinja2==3.1.2
 
 # Database
 psycopg2-binary==2.9.9
@@ -19,8 +20,18 @@ open-clip-torch==2.24.0
 Pillow==10.1.0
 numpy==1.24.3
 
-# Optional: OpenAI API (for comparison)
+# File Processing - NEW!
+pdfplumber==0.10.0
+pandas==2.1.4
+python-magic==0.4.27
+openpyxl==3.1.2
+
+# RAG & LLM - NEW!
+langchain==0.1.0
 openai==1.3.8
+
+# Analytics & Visualization - NEW!
+plotly==5.17.0
 
 # Utilities
 python-dotenv==1.0.0
