--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,39 @@
 # Core dependencies
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
-python-multipart==0.0.6
+fastapi>=0.100.0
+uvicorn[standard]>=0.23.0
+pydantic>=2.4.0,<2.5.0
+pydantic-settings>=2.0.3,<2.1.0
+python-multipart>=0.0.6
 
 # Database
-psycopg2-binary==2.9.9
-asyncpg==0.29.0
-sqlalchemy==2.0.23
-alembic==1.13.0
+psycopg2-binary>=2.9.0
+asyncpg>=0.28.0
+sqlalchemy>=2.0.0
+alembic>=1.12.0
 
-# Machine Learning
-torch==2.1.1
-torchvision==0.16.1
-transformers==4.36.0
-open-clip-torch==2.24.0
-Pillow==10.1.0
-numpy==1.24.3
+# Machine Learning - Use sentence-transformers for better compatibility
+sentence-transformers>=2.2.2
+torch>=1.13.0,<2.2.0
+numpy>=1.24.0,<2.0.0
+Pillow>=10.0.0
 
-# Optional: OpenAI API (for comparison)
-openai==1.3.8
+# File processing
+pdfplumber>=0.9.0
+pandas>=2.0.0
+# python-magic>=0.4.27  # Optional: for better file type detection
+
+# Analytics and visualization
+plotly>=5.17.0
+
+# RAG/LLM support
+langchain>=0.1.0
+langchain-openai>=0.0.8
+openai>=1.0.0
 
 # Utilities
-python-dotenv==1.0.0
-aiofiles==23.2.0
-aiohttp==3.9.1
+python-dotenv>=1.0.0
+aiofiles>=23.0.0
+aiohttp>=3.9.0
 
 # Development
 pytest==7.4.3
