--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL with pgvector extension
   database:
@@ -9,6 +7,7 @@ services:
       POSTGRES_DB: pany_vectordb
       POSTGRES_USER: pany_user
       POSTGRES_PASSWORD: pany_password
+      POSTGRES_HOST_AUTH_METHOD: trust
     ports:
       - "5432:5432"
     volumes:
